Fix navbar spacing

--- a/src/components/body.css
+++ b/src/components/body.css
@@ -4,7 +4,7 @@ html {
 }
 
 body {
-  background-color: hsl(180, 90%, 90%)
+  background-color: hsl(180, 90%, 90%);
 }
 
 @media print {
